// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSmartTableError should not render the title if title prop was not given 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <!---->
     
    <!---->
  </div>
   Random error message
</div>
`;

exports[`EcSmartTableError should render default error message 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <!---->
  </div>
   Unexpected error while fetching data
</div>
`;

exports[`EcSmartTableError should render given error slot 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <!---->
  </div>
   
  <strong>
    Error Slot: Test error message
  </strong>
</div>
`;

exports[`EcSmartTableError should render given filter and header-actions slots 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <div
        class="ec-smart-table-heading__filter"
      >
        <div>
          Custom filter
        </div>
      </div>
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions
        </div>
      </div>
    </div>
  </div>
   Random error message
</div>
`;

exports[`EcSmartTableError should render given filter slot 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <div
        class="ec-smart-table-heading__filter"
      >
        <div>
          Custom filter
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   Random error message
</div>
`;

exports[`EcSmartTableError should render given header-actions slot 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions
        </div>
      </div>
    </div>
  </div>
   Random error message
</div>
`;

exports[`EcSmartTableError should render given header-actions slot with the props 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions total: 0, items: [], error: Random error message, loading: false
        </div>
      </div>
    </div>
  </div>
   Random error message
</div>
`;

exports[`EcSmartTableError should render properly 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <!---->
  </div>
   Random error message
</div>
`;
